# phi-scaling-validator

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASE_GUIDE.md  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
data/: beta_clusters_78systems.yaml  crep_spectrum_p17_p30.yaml  zenodo_metadata.yaml
docs/: cli.md  index.md
notebooks/: 01_phi_power_atlas.ipynb  02_beta_crep_scaling.ipynb  03_universality_test.ipynb  04_eml_phi_connection.ipynb
src/phi_scaling/: __init__.py  beta_scaling.py  cli.py  crep_scaling.py  eml_scaling.py  null_hypothesis.py  phi_constants.py  q4_scaling.py  statistical_tests.py  system.py  vrig_scaling.py
tests/: test_diamond_interface.py  test_phi_scaling.py
