[project]
name = "phi-scaling-validator"
version = "1.0.0"
description = "Phi^(1/3) universal scaling validator (GenesisAeon P38), bundled with the diamond-setup project scaffolding CLI"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johann Römer" }]
requires-python = ">=3.11"
keywords = ["phi", "golden ratio", "scaling exponent", "CREP", "UTAC", "GenesisAeon", "scaffold", "project-generator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
phi = [
    "matplotlib>=3.9",
    "jupyter>=1.0",
]

[project.scripts]
diamond = "diamond_setup.cli:app"
phi-validate = "phi_scaling.cli:app"

[project.urls]
Homepage = "https://github.com/GenesisAeon/phi-scaling-validator"
Repository = "https://github.com/GenesisAeon/phi-scaling-validator"
Documentation = "https://genesisaeon.github.io/phi-scaling-validator"
Issues = "https://github.com/GenesisAeon/phi-scaling-validator/issues"
Zenodo = "https://doi.org/10.5281/zenodo.17472834"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/diamond_setup", "src/phi_scaling"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]  # typer uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

